Minor UI fixes: White space at bottom of screen, modal title, TODO updates

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,7 @@
 .header-label{
     color: fuchsia;
 }
+
+.container-fluid{
+    background-color: fuchsia;
+}
